# testingtriange

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: admin.py  dashboard.py  health.py  search.py  triage.py  webhooks.py
backend/app/cache/: semantic_cache.py
backend/app/core/: config.py  database.py  github_auth.py
backend/app/github/: __init__.py  comments.py
backend/app/indexing/: embedder.py  pipeline.py  qdrant_store.py
backend/app/indexing/chunkers/: __init__.py  code.py  discussion.py  markdown.py
backend/app/ingestion/: fetchers.py  github_client.py
backend/app/models/: orm.py
backend/app/retrieval/: __init__.py  dense.py  fusion.py  graph.py  hydration.py  reranker.py  sparse.py
backend/app/triage/: __init__.py  formatter.py  llm.py  pipeline.py  prompt.py  schemas.py
backend/app/workers/: celery_app.py  incremental_tasks.py  indexing_tasks.py  ingestion_tasks.py  triage_tasks.py
backend/tests/: conftest.py  test_calibration.py  test_chunkers.py  test_dashboard.py  test_database.py  test_embedder.py  test_eval_metrics.py  test_fetchers.py  test_github_client.py  test_github_comments.py  test_incremental_tasks.py  test_indexing_pipeline.py  test_ingestion_tasks.py  test_qdrant_store.py  test_retrieval_dense.py  test_retrieval_fusion.py  test_retrieval_graph.py  test_retrieval_hydration.py  test_retrieval_reranker.py  test_retrieval_sparse.py  test_search_endpoint.py  test_semantic_cache.py  test_triage_endpoint.py  test_triage_formatter.py  test_triage_llm.py  test_triage_pipeline.py  test_triage_tasks.py  test_webhooks.py
docs/superpowers/plans/: 2026-04-12-day1-scaffold.md  2026-04-13-day2-backfill.md  2026-04-14-day3-indexing.md
docs/superpowers/specs/: 2026-04-12-triage-copilot-design.md
eval/: loader.py  metrics.py  results.md  run_eval.py  runner.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/repos/[repoId]/: page.tsx
frontend/app/repos/[repoId]/results/[resultId]/: page.tsx
frontend/lib/: api.ts
scripts/: smoke_test.sh
