[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage-copilot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Database — async ORM + driver + migrations
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    # Config
    "pydantic-settings>=2.2.1",
    # Task queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.4",
    # GitHub App auth
    "PyJWT>=2.8.0",
    "cryptography>=42.0.5",
    # HTTP client (used in ingestion + tests)
    "httpx>=0.27.0",
    # GitHub REST API wrapper (used in actions layer)
    "PyGithub>=2.3.0",
    # Chunking — AST-based code parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    # Vector DB
    "qdrant-client>=1.9.0",
    # Embeddings
    "voyageai>=0.3.0",
    "openai>=1.30.0",
    "cohere>=5.0.0",
    "anthropic>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
